# Visa-agent

./: .env.example  .gitignore  README.md  docker-compose.yml  livekit.yaml
.github/workflows/: deploy.yml
agent/: .dockerignore  .env.example  Dockerfile  pyproject.toml
agent/src/: agent.py  healthcheck.py
deploy/: SETUP.md  setup-gcp.sh
docs/: ARCHITECTURE.md
frontend/: Dockerfile  app-config.ts  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/token/: route.ts
frontend/app/fonts/integralcf/: stylesheet.css
frontend/app/fonts/interdisplay/: stylesheet.css
frontend/components/: custombutton.tsx
frontend/components/agents-ui/: agent-audio-visualizer-aura.tsx  agent-audio-visualizer-bar.tsx  agent-control-bar.tsx  agent-track-control.tsx
frontend/components/interview/: InterviewProvider.tsx  index.ts  session-view.tsx  tile-layout.tsx  view-controller.tsx
frontend/components/mock-interview/: InterviewResultsView.tsx  ScoreGauge.tsx  index.ts
frontend/components/ui/: live-waveform.tsx  select.tsx  toggle.tsx
