[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visa-interview-agent"
version = "1.0.0"
description = "LiveKit AI Agent for Mock Visa Interviews with Gemini Live Vision"
requires-python = ">=3.11, <3.14"

dependencies = [
    "livekit-agents[google,silero,turn-detector,images]~=1.4",
    "livekit-plugins-noise-cancellation~=0.2",
    "python-dotenv",
    "httpx>=0.27.0",
    "pillow>=10.0.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
